增加jvm